// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'app_localizations.dart';

// ignore_for_file: type=lint

/// The translations for English (`en`).
class AppLocalizationsEn extends AppLocalizations {
  AppLocalizationsEn([String locale = 'en']) : super(locale);

  @override
  String get appTitle => 'Gist';

  @override
  String get demoScreen => 'Demo Screen';

  @override
  String get detailScreen => 'Detail Screen';

  @override
  String get getAnotherJoke => 'Get Another Joke';

  @override
  String get viewDetails => 'View Details';

  @override
  String get goBack => 'Go Back';

  @override
  String get error => 'Error';

  @override
  String get tryAgain => 'Try Again';

  @override
  String get jokeDetails => 'Joke Details';

  @override
  String get noJokeProvided => 'No joke provided';

  @override
  String get noJokeLoaded => 'No joke loaded';

  @override
  String get toggleTheme => 'Toggle Theme';

  @override
  String get loading => 'Loading...';

  @override
  String get serverError => 'Server error occurred';

  @override
  String get networkError => 'No internet connection';

  @override
  String get language => 'Language';

  @override
  String get english => 'English';

  @override
  String get spanish => 'Spanish';
}
